# ormatic

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml  run_tests.yaml
src/ormatic/: __init__.py  custom_types.py  dao.py  eql_interface.py  example.py  field_info.py  ormatic.py  parsers.py  python_file_generator.py  sqlalchemy_generator.py  utils.py
src/ormatic/templates/: sqlalchemy_model.py.jinja
templates/: sqlalchemy_model.py.jinja
test/: integration.py  orm_interface.py  test_cyclic_imports.py  test_dao.py  test_eql.py  test_field_info.py  test_generation.py  test_interface.py  test_ormatic.py  test_sqlalchemy_generation.py
test/classes/: cyclic_imports.py  example_classes.py  orm_interface.py  sqlalchemy_interface.py
